--- a/corner-antenna/requirements.txt
+++ b/corner-antenna/requirements.txt
@@ -6,5 +6,27 @@
 #
 -e git+https://github.com/gut-space/analog-noise-estimator.git#egg=analog-noise-estimator
     # via -r requirements.in
+cycler==0.11.0
+    # via matplotlib
+fonttools==4.29.0
+    # via matplotlib
+kiwisolver==1.3.2
+    # via matplotlib
+matplotlib==3.5.1
+    # via -r requirements.in
 numpy==1.22.1
-    # via analog-noise-estimator
+    # via
+    #   analog-noise-estimator
+    #   matplotlib
+packaging==21.3
+    # via matplotlib
+pillow==9.0.0
+    # via matplotlib
+pyparsing==3.0.7
+    # via
+    #   matplotlib
+    #   packaging
+python-dateutil==2.8.2
+    # via matplotlib
+six==1.16.0
+    # via python-dateutil
